# crlEPH2

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  EXPERIMENT_WORKFLOW_EXAMPLE.md  MIGRATION_GUIDE.md  README_RESEARCH_TEMPLATE.md  README_phase4.md  run.sh
.claude/: settings.json
.claude/00_project/: PHASE4_SUCCESS.md  glossary.md  overview.md  phase1_prompt.md  phase4_completion_report.md  phase5_proposal.md  phase_roadmap.md
.claude/01_development_docs/: parameter_tuning_log.md
.claude/01_development_docs/cpp_guidelines/: coding_style.md
.claude/01_development_docs/package_specs/: eph_agent.md  eph_core.md  eph_phase.md  eph_spm.md  eph_swarm.md
.claude/04_onboarding/: quickstart.md
analysis/visualization/: plot_agent_trajectories.py  plot_haze_field.py  plot_phase_transition.py
cpp_server/: CMakeLists.txt  main.cpp  protocol.hpp  udp_server.cpp  udp_server.hpp
doc/appendix/: EPH-2.1_appendix-A_proofs.md  EPH-2.1_appendix-B_spm.md  EPH-2.1_appendix-C_validation.md  EPH-2.1_appendix-D_related-work.md
doc/proposals/: EPH_v2.1_Research_Proposal_20260209.md
docs/: index.html  phase2_completion_notes.md
docs/plans/: 2026-02-10-pyqt6-gui-design.md  2026-02-10-pyqt6-gui-phase1-implementation.md  2026-02-11-pyqt6-gui-phase2-implementation.md  2026-02-12-pyqt6-gui-phase3-implementation.md
docs/theory/: EPH-2.1_main.md
docs/theory/appendix/: EPH-2.1_appendix-C_validation.md
experiments/: README.md
experiments/configs/: README.md  baseline.yaml  template.yaml
gui/: main.py  test_global_view_fixes.py  test_parameter_panel_manual.py  test_phase2_integration.py  test_playback_toolbar_manual.py
gui/bridge/: protocol.py  test_protocol.py  test_udp_client.py  udp_client.py
gui/widgets/: global_view.py  main_window.py
scripts/: plot_phase_transition.py  test_udp_communication.sh
scripts/utils/: kill_processes.sh
src/cpp_server/: main.cpp  protocol.hpp
src/gui/: main.py  requirements.txt
src/gui/bridge/: protocol.py
src/gui/widgets/: agent_detail_panel.py  global_view.py  main_window.py  (+2 more)
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/integration/: test_toolbar_integration.py
tests/unit/: test_global_view.py  test_parameter_panel.py  test_playback_toolbar.py
